# opcua-tm4c123g

./: README.md
home/: .cproject  .project  LICENSE  Makefile  Makefile.am  Makefile.mcu  configure.ac  control.c  control.h  led_task.c  led_task.h  main.c
home/FreeRTOS/: .cproject  .project
home/FreeRTOS/FreeRTOS/Source/portable/MSVC-MingW/: port.c  portmacro.h
