# Author: Alexander Rykovanov 2015
#
#
# Distributed under the GNU LGPL License
# (See accompanying file LICENSE or copy at 
# http://www.gnu.org/licenses/lgpl.html)
#

AC_INIT([freertos_home], [1.0], [rykovanov.as@gmail.com])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_SRCDIR([main.c])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

CXXFLAGS="-O2 -std=c99"

AC_PROG_CC
AM_PROG_AR

AC_CONFIG_HEADER([config.h])

#################################################################
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

